stages/stage7/k8s/infra/redis/redis-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-apps
  namespace: apollo11-infra
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: apollo11-apps
      ports:
        - protocol: TCP
          port: 6379
  policyTypes:
    - Ingress
